--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "git-learning-2",
+  "name": "learning-git",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "js.js",
   "scripts": {
-    "test": "npm-run-all test*",
+    "test": "npm-run-all test:*",
     "test:html": "globstar nu-html-checker *.html",
-    "init-project": "npm install && npm-run-all init:*",
-    "init:dirs": "mkdirp sass css vendor images js",
-    "init:files": "touch README.md index.html sass/style.scss js/script.js",
-    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "build": "npm-run-all build:* test",
-    "build:sass": "node-sass --output-style compact -o css sass",
-    "build:autoprefixer": "autoprefixer-cli css/style.css",
-    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "build": "npm-run-all build:* test:*",
+    "build:autoprefixer": "autoprefixer-cli style.css",
     "watch": "npm-run-all build -p watch:*",
-    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
-    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css"
+    "watch:autoprefixer": "onchange -d 100 style.css -- autoprefixer-cli -o style.prefixed.css style.css",
+    
+    "watch:browsersync": "browser-sync start --server --files *.css *.html"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Montette/git-learning-2.git"
+    "url": "git+https://github.com/Montette/git-learning.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Montette/git-learning-2/issues"
+    "url": "https://github.com/Montette/git-learning/issues"
   },
-  "homepage": "https://github.com/Montette/git-learning-2#readme",
+  "homepage": "htgit tretps://github.com/Montette/git-learning#readme",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.23.6",
@@ -37,6 +32,7 @@
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "nu-html-checker": "^0.1.0",
-    "onchange": "^3.3.0"
+    "onchange": "^3.3.0",
+    "rimraf": "^2.6.2"
   }
 }
