--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "test": "npm-run-all test:*",
     "test:html": "globstar nu-html-checker *.html",
     "build": "npm-run-all build:* test:*",
-    "build:autoprefixer": "autoprefixer-cli style.css",
+    "build:sass": "node-sass --output-style compact -o css sass",  
+    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "npm-run-all build -p watch:*",
-    "watch:autoprefixer": "onchange -d 100 style.css -- autoprefixer-cli -o style.prefixed.css style.css",
     
-    "watch:browsersync": "browser-sync start --server --files *.css *.html"
+    "watch:sassprefixer": "onchange sass/*.scss -- npm-run-all sassprefixer:*",
+    "sassprefixer:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "sassprefixer:autoprefixer": "autoprefixer-cli css/style.css",
+    
+    "watch:browsersync": "browser-sync start --server --files css/*.css *.html"
   },
   "repository": {
     "type": "git",
